Resolved comments